Fixed modal and input spacing

--- a/src/web/rsrl/src/Common/styles/Modal.scss
+++ b/src/web/rsrl/src/Common/styles/Modal.scss
@@ -12,8 +12,8 @@
   border-radius: 0.5rem !important;
 }
 .modal-header {
-  padding-bottom: 0px;
+  padding-bottom: 0px !important;
 }
 .modal-body {
-  padding-top: 8px;
+  padding-top: 8px !important;
 }
